# geomtools

./: AABBTree.cc  AABBTree.h  CMakeLists.txt  ControlPrintf.h  ConvexifyPolygon.h  Dijxtra.cc  KDTree.h  MarchingCubes.cc  MeshCrossField.cc  MeshFloodFill.cc  MeshParallel.cc  MeshPatchLoops.cc  MeshSampling.cc  MeshSampling.h  MeshTools.cc  MeshTools.h  MeshTopoCuts.cc  MovingLeastSquares.cc  NotNeededGravityPoints.cc  PointSet.cc  PointSet.h  QuadRemesh.cc  README.md  SDF.cc  SpatialHashTable.h  cGrid3d.h  cOctree.cc  cOctree.h  cSimVolume.cc  cSimVolume.h  common.h  fibonacci.hpp  happly.h  main_PatchLoops.cc  main_SimpleCuts.cc  raytri.cc  test_main.cc  tools3d.cc  tools3d.h  tribox3.cc  (+1 more)
